Responsive grid letter spacing fix

--- a/css/fonts.css
+++ b/css/fonts.css
@@ -31,3 +31,7 @@ h6 {
   font-size: 1em;
   font-family: 'Oswald', sans-serif;
   font-smoothing: antialiased; }
+
+.pure-g {
+  letter-spacing: normal;
+}
